--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -359,7 +359,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle, #920000 100%, #f30000 100%);
+  background: radial-gradient(circle, #bd0000 100%, #ff0000 100%);
   background-attachment: fixed;
   z-index: -1; /* Coloca a camada do fundo atrás do conteúdo */
 }
@@ -369,23 +369,57 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 3000px 0 0 0; /* Adicione padding-top para descer o conteúdo */
+  padding: 0;
   margin: 0;
-  height: 150%; /* Defina a altura desejada */
+  height: 70%; /* Defina a altura desejada */
   max-height: 90vh; /* Defina uma altura máxima para evitar que o conteúdo ultrapasse a altura da janela do navegador */
 }
 
-.pastelmenu {
-  /* Estilos para o contêiner .pastelmenu */
+.logopastel {
+  width: 350px;
+  height: 185px;
+  margin-top: 100px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -10px;
 }
 
-.image-container {
-  padding-top: 20px; /* Adicione espaço acima da imagem */
-  padding-bottom: 20px; /* Adicione espaço abaixo da imagem */
+.fraselogopastel {
+  position: relative;
+  margin-top: 10px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 19pt;
+  font-family:'Franklin Gothic Medium', sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0px;
+  line-height: 30px;
+  color: rgb(255, 255, 255);
 }
 
-.pastelmenu-image {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
+.textbtpastel {
+  display: inline-block;
+  width: 150px;
+  height: 40px;
+  margin-top: 8px;
+  margin-right: 0px;
+  margin-bottom: 8px;
+  margin-left: 0px;
+  word-spacing: 0px;
+  font-weight: 700;
+  font-family: Helvetica;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+  color: rgb(0, 0, 0);
 }
