--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -423,3 +423,21 @@
   letter-spacing: 2px;
   color: rgb(0, 0, 0);
 }
+
+.fraseconstru {
+  position: relative;
+  margin-top: -20px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20pt;
+  font-family:'Franklin Gothic Medium', sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0px;
+  line-height: 30px;
+  color: rgb(255, 0, 0);
+}
