--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -441,3 +441,14 @@
   line-height: 30px;
   color: rgb(255, 0, 0);
 }
+
+.whatsb {  
+  position:fixed;
+  width:50px;
+  height:50px;
+  bottom:10px;
+  right:10px;
+  text-align:center;
+  font-size:30px;
+  z-index:1000;
+}
