Ponto de reversão 28-02

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -322,8 +322,7 @@
 }
 
 .homepage {
-  position: relative;
-  height: 100vh;
+  
 }
 
 .homepage-background {
@@ -340,12 +339,13 @@
 .homepage-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   padding: 0;
   margin: 0;
   height: 70%; /* Defina a altura desejada */
   max-height: 90vh; /* Defina uma altura máxima para evitar que o conteúdo ultrapasse a altura da janela do navegador */
+  margin-top: 0; /* Define a margem superior como zero */
 }
 
 .homepastel {
