--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -339,7 +339,7 @@
 .homepage-content {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex;
   align-items: center;
   padding: 0;
   margin: 0;
